--- a/page1/part3/assets/scss/pages/_index.scss
+++ b/page1/part3/assets/scss/pages/_index.scss
@@ -12,7 +12,8 @@ header {
   left: 0;
   background-color: white;
   opacity: 0.8;
-  height: 110px;
+  height: 105px;
+  z-index: 2;
 
   #logo {
     width: 134.3px;
