--- a/page1/part3/assets/scss/pages/_index.scss
+++ b/page1/part3/assets/scss/pages/_index.scss
@@ -158,7 +158,7 @@ header {
 
 
 // section
-section {
+.front-secton {
   background-image: url(https://frankyeah.github.io/Front-Enter/images/key-visual.jpg);
   background-repeat: no-repeat;
   background-position: center;
