--- a/page1/part3/assets/scss/all.scss
+++ b/page1/part3/assets/scss/all.scss
@@ -5,6 +5,7 @@
 
 // pages
 @import "./pages/index";
-@import "./pages/discover";
+@import "./pages/article";
+@import "./pages/content";
 @import "./pages/skill" 
 
