--- a/page1/part3/assets/scss/utils/_reset.scss
+++ b/page1/part3/assets/scss/utils/_reset.scss
@@ -32,6 +32,11 @@ li {
  margin: 0 auto; 
 }
 
+.content-container {
+  max-width:90%;
+  margin: 0 auto;
+}
+
 a {
   text-decoration: none;
   cursor: pointer;
@@ -48,4 +53,8 @@ a {
 
 .text-center {
   text-align: center;
+}
+
+.d-none {
+  display: none;
 }
