--- a/page1/part3/assets/css/all.css
+++ b/page1/part3/assets/css/all.css
@@ -705,6 +705,12 @@ main > div.forth-pic:hover {
 }
 main > div.forth-pic .forth-insdie {
   height: 50%;
+  max-width: 685px;
+}
+@media (max-width: 768px) {
+  main > div.forth-pic .forth-insdie {
+    max-width: 86%;
+  }
 }
 @media (max-width: 390px) {
   main > div.forth-pic .forth-insdie {
@@ -712,12 +718,11 @@ main > div.forth-pic .forth-insdie {
   }
 }
 main > div.forth-pic .forth-insdie p {
-  max-width: 482px;
-  margin-left: 38px;
   color: white;
   line-height: 35px;
   text-align: left;
   font-size: 18px;
+  text-align: justify;
 }
 @media (max-width: 576px) {
   main > div.forth-pic .forth-insdie p {
@@ -725,8 +730,6 @@ main > div.forth-pic .forth-insdie p {
     margin-left: 0px;
     padding: 0 21px;
     font-size: 16px;
-    text-align: justify;
-    word-break: normal;
   }
 }
 @media (max-width: 390px) {
