--- a/page1/part3/assets/scss/utils/_common.scss
+++ b/page1/part3/assets/scss/utils/_common.scss
@@ -25,9 +25,8 @@ div.loading-animation {
   transition: all 0.5s linear;
   opacity: 1;
 
-
   div.loading-img {
-    background-image: url('../images/FE_logo-4.png');
+    background-image: url("../images/FE_logo-4.png");
     background-size: cover;
     width: 300px;
     height: 130px;
@@ -36,36 +35,115 @@ div.loading-animation {
   }
 }
 
-
-
-
 /* animation section */
 /* loading animation */
 @keyframes loadingUpDown {
-  0%   { margin-bottom: 250px; }
-  25%  { margin-bottom: 150px; }
-  50%  { margin-bottom: 250px; }
-  75%  { margin-bottom: 150px; }
-  100% { margin-bottom: 250px; }
+  0% {
+    margin-bottom: 250px;
+  }
+  25% {
+    margin-bottom: 150px;
+  }
+  50% {
+    margin-bottom: 250px;
+  }
+  75% {
+    margin-bottom: 150px;
+  }
+  100% {
+    margin-bottom: 250px;
+  }
 }
-
 
 /*  箭頭動畫  */
 @keyframes UpDownChange {
-  0%   { top: 545px  }
-  25%  { top: 550px; }
-  50%  { top: 555px; }
-  75%  { top: 550px; }
-  100% { top: 545px; }
+  0% {
+    top: 545px;
+  }
+  25% {
+    top: 550px;
+  }
+  50% {
+    top: 555px;
+  }
+  75% {
+    top: 550px;
+  }
+  100% {
+    top: 545px;
+  }
+}
+
+@keyframes arrowChange {
+  0% {
+    margin-left: 165px;
+  }
+  25% {
+    margin-left: 170px;
+  }
+  50% {
+    margin-left: 175px;
+  }
+  75% {
+    margin-left: 170px;
+  }
+  100% {
+    margin-left: 165px;
+  }
+}
+
+// 左右擺動
+@keyframes RightLeftChange {
+  0%  {  transform: translate(-10px); }
+  5%  {  transform: translate(10px);  }
+  10% {  transform: translate(-10px); }
+  20% {  transform: translate(10px);  }
+  25% {  transform: translate(-10px); }
+  30% {  transform: translate(10px);  }
+  35% {  transform: translate(-10px); }
+  40% {  transform: translate(10px);  }
+  45% {  transform: translate(-10px); }
+  50% {  transform: translate(10px);  }
+  55% {  transform: translate(-10px); }
+  60% {  transform: translate(10px);  }
 }
 
 /* my-aside 動畫 */
 @keyframes asiderunning {
-  0%   { bottom: 90%  }
-  100% { bottom: 20%; }
+  0% {
+    bottom: 90%;
+  }
+  100% {
+    bottom: 20%;
+  }
 }
 
 @keyframes headerGoUp {
-  0%   { top: 100px; }
-  100% { top: 100px; }
+  0% {
+    top: 100px;
+  }
+  100% {
+    top: 100px;
+  }
+}
+
+// 360度旋轉
+@keyframes rotatemove {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+// 打字浮標動畫
+@keyframes flash {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
